--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:text="Forgot password"
+            android:background="@drawable/button_round"
             android:textColor="#ffffff"
         />
 
