--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,13 +24,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Login"
+            android:singleLine="true"
         />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:hint="Password"
+            android:inputType="textPassword"
         />
 
         <Button
