--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -17,8 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-    >
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/login"
@@ -39,7 +37,6 @@
 
         <Button
             android:id="@+id/sing_in"
-            style="@style/LoginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minWidth="160dp"
@@ -48,7 +45,6 @@
 
         <Button
             android:id="@+id/sing_up"
-            style="@style/LoginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -59,7 +55,6 @@
 
         <TextView
             android:id="@+id/forgot_password"
-            style="@style/LoginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
