--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,9 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme.Login" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">#FFA000</item>
-        <item name="colorPrimaryDark">#BFBFA7</item>
-        <item name="colorAccent">#536DFE</item>
-    </style>
-
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">#FFC107</item>
-        <item name="colorPrimaryDark">#FFA000</item>
-        <item name="colorAccent">#536DFE</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="Widget.Toolbar" parent="Widget.AppCompat.Toolbar">
@@ -19,11 +11,6 @@
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
         <item name="android:background">?colorPrimary</item>
         <item name="android:minHeight">?actionBarSize</item>
-    </style>
-
-    <style name="LoginButton">
-        <item name="android:background">@drawable/button_round</item>
-        <item name="android:textColor">#ffffff</item>
     </style>
 
 
