--- a/app/src/main/res/layout/tab_fragment_login.xml
+++ b/app/src/main/res/layout/tab_fragment_login.xml
@@ -2,8 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:layout_marginBottom="32dp"
-              android:layout_marginTop="32dp"
               android:orientation="vertical">
 
     <EditText
@@ -14,14 +12,14 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Pass"/>
+        android:hint="Pass"
+        android:inputType="textPassword"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Conf pass"/>
+        android:hint="Conf pass"
+        android:inputType="textPassword"/>
 
     <EditText
         android:layout_width="match_parent"
