Share date on ContactFragment, InfoFragment, LoginFragment Start create Registration (Activity with Fragments) Add Profile class to util SaveState user input from RegistrationActivity

--- a/app/src/main/res/layout/tab_fragment_contact.xml
+++ b/app/src/main/res/layout/tab_fragment_contact.xml
@@ -7,18 +7,18 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="Phone"
         android:inputType="textEmailAddress"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Phone"
+        android:hint="Skype"
         android:inputType="phone"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Skype"/>
+        android:hint="City"/>
 
 </LinearLayout>
