--- a/app/src/main/res/layout/fragment_tab_info.xml
+++ b/app/src/main/res/layout/fragment_tab_info.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,26 +57,20 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#ab362abe"
-        android:orientation="horizontal">
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"/>
+        android:background="#ab362abe">
 
         <Button
             android:id="@+id/next"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="right"
+            android:="Next"
             android:background="#be2a2a"
-            android:text="Next"
             android:textColor="#FFFFFF"/>
-    </LinearLayout>
+    </FrameLayout>
 
 </RelativeLayout>
