--- a/app/src/main/res/layout/fragment_tab_login.xml
+++ b/app/src/main/res/layout/fragment_tab_login.xml
@@ -61,26 +61,21 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#ab362abe"
-        android:orientation="horizontal">
-
-        <View android:layout_width="0dp"
-              android:layout_height="match_parent"
-              android:layout_weight="2"/>
+        android:background="#ab362abe">
 
         <Button
             android:id="@+id/next"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="right"
+            android:="Next"
             android:background="#be2a2a"
-            android:text="Next"
-            android:textColor="#FFFFFF"
-        />
-    </LinearLayout>
+            android:textColor="#FFFFFF"/>
+
+    </FrameLayout>
 
 </RelativeLayout>
