--- a/app/src/main/res/layout/fragment_tab_info.xml
+++ b/app/src/main/res/layout/fragment_tab_info.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,20 +58,10 @@
 
     </LinearLayout>
 
-    <FrameLayout
+    <include
+        layout="@layout/tab_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#ab362abe">
-
-        <Button
-            android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:="Next"
-            android:background="#be2a2a"
-            android:textColor="#FFFFFF"/>
-    </FrameLayout>
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
