--- a/app/src/main/res/layout/fragment_tab_login.xml
+++ b/app/src/main/res/layout/fragment_tab_login.xml
@@ -61,21 +61,10 @@
 
     </LinearLayout>
 
-    <FrameLayout
+    <include
+        layout="@layout/tab_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#ab362abe">
-
-        <Button
-            android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:="Next"
-            android:background="#be2a2a"
-            android:textColor="#FFFFFF"/>
-
-    </FrameLayout>
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
