--- a/app/src/main/res/layout/fragment_tab_info.xml
+++ b/app/src/main/res/layout/fragment_tab_info.xml
@@ -17,7 +17,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Name"
+                android:hint="@string/registration_name"
             />
 
         </android.support.design.widget.TextInputLayout>
@@ -30,15 +30,14 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Surname"/>
+                android:hint="@string/registration_surname"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <Spinner
             android:id="@+id/sex"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="sex"/>
+            android:layout_height="wrap_content"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/date_birth_layout"
