--- a/app/src/main/res/layout/tab_navigation.xml
+++ b/app/src/main/res/layout/tab_navigation.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:background="#be2a2a"
-        android:text="Next"
+        android:text="@string/register_navigation_next"
         android:textColor="#FFFFFF"/>
 
     <Button
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="#2abea3"
-        android:text="Complete"
+        android:text="@string/register_navigation_create_account"
         android:textColor="#FFFFFF"/>
 
 </ViewSwitcher>
