--- a/app/src/main/res/layout/fragment_wall.xml
+++ b/app/src/main/res/layout/fragment_wall.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/listView"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/posts_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
         />
