WallFragment add RecyclerView scroll listener and load more date Add LoadPagination, PaginationOnScrollListener for simple implement pagination for each ViewPagination (Activity with pagination or Fragment with pagination)

--- a/app/src/main/res/layout/fragment_wall.xml
+++ b/app/src/main/res/layout/fragment_wall.xml
@@ -19,4 +19,12 @@
 
     <include layout="@layout/error_view"/>
 
+    <include
+        android:id="@+id/progress_pagination_view"
+        layout="@layout/progress_pagination"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:visibility="gone"/>
+
 </FrameLayout>
