--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout
+<android.support.v7.widget.Toolbar
+    android:id="@+id/toolbar"
+    style="@style/Widget.Toolbar"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:layout_scrollFlags="scroll|enterAlways"
+    tools:title="@string/app_name"/>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        style="@style/Widget.Toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:title="@string/app_name"
-    />
-
-</android.support.design.widget.AppBarLayout>
