--- a/app/src/main/res/layout/item_post_image.xml
+++ b/app/src/main/res/layout/item_post_image.xml
@@ -3,7 +3,6 @@
     android:id="@+id/card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -26,7 +25,6 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="16dp"
-            android:background="@color/colorAccent"
         />
 
         <TextView
@@ -39,7 +37,6 @@
             android:maxLines="1"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            tools:text="Owner name lastname"
         />
 
         <ImageView
@@ -48,17 +45,16 @@
             android:layout_height="300dp"
             android:layout_below="@+id/owner_image"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorPrimary"/>
+            android:layout_marginTop="16dp"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/like"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_below="@+id/post_image"
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
-            android:background="@color/colorPrimaryDark"/>
+            android:background="@drawable/ic_like_default"/>
 
         <TextView
             android:id="@+id/like_count"
@@ -67,18 +63,17 @@
             android:layout_below="@+id/post_image"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:layout_toEndOf="@id/like"
-            tools:text="14"/>
+            android:layout_toEndOf="@id/like"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/dislike"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_below="@+id/post_image"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:layout_toEndOf="@id/like_count"
-            android:background="@color/colorPrimaryDark"/>
+            android:background="@drawable/ic_dislike_default"/>
 
         <TextView
             android:id="@+id/dislike_count"
@@ -87,8 +82,7 @@
             android:layout_below="@+id/post_image"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:layout_toEndOf="@id/dislike"
-            tools:text="1"/>
+            android:layout_toEndOf="@id/dislike"/>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
