--- a/app/src/main/res/layout/fragment_wall.xml
+++ b/app/src/main/res/layout/fragment_wall.xml
@@ -1,32 +1,47 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-    <include layout="@layout/loading_view"/>
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/contentView"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/posts_recycler"
+        <include layout="@layout/loading_view"/>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/contentView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
+            android:layout_height="wrap_content">
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/posts_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-    <include layout="@layout/error_view"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
 
-    <include
-        android:id="@+id/progress_pagination_view"
-        layout="@layout/progress_pagination"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:visibility="gone"/>
+        <include layout="@layout/error_view"/>
 
-</FrameLayout>
+        <include
+            android:id="@+id/progress_pagination_view"
+            layout="@layout/progress_pagination"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:visibility="gone"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/new_post_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_write_post"
+            app:layout_anchor="@id/posts_recycler"
+            app:layout_anchorGravity="bottom|right|end"/>
+
+
+    </FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
