--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -7,8 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
->
+    tools:openDrawer="start">
 
     <include layout="@layout/activity_toolbar"/>
 
@@ -18,8 +17,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:headerLayout="@layout/navigation_header"
         app:itemTextColor="?android:textColorPrimary"
-        app:menu="@menu/navigation_item"
-    />
+        app:menu="@menu/navigation_item"/>
 
 </android.support.v4.widget.DrawerLayout>
