--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,16 +2,17 @@
 <RelativeLayout
     android:id="@+id/content"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity">
+    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
 
     <LinearLayout
+        android:id="@+id/loginForm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -35,13 +36,30 @@
             android:singleLine="true"
         />
 
-        <Button
+        <!--<Button-->
+        <!--android:id="@+id/sing_in"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:minWidth="160dp"-->
+        <!--android:text="@string/authorization_log_in"-->
+        <!--/>-->
+
+        <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/sing_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="160dp"
+            android:minWidth="200dp"
             android:text="@string/authorization_log_in"
-        />
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            custom:pb_colorComplete="@color/green_complete"
+            custom:pb_colorError="@color/red_error"
+            custom:pb_colorNormal="@color/blue_normal"
+            custom:pb_colorPressed="@color/blue_pressed"
+            custom:pb_colorProgress="@color/purple_progress"
+            custom:pb_textComplete="Success"
+            custom:pb_textError="Error"
+            custom:pb_textProgress="Loading"/>
 
         <Button
             android:id="@+id/sing_up"
@@ -49,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:minWidth="160dp"
+            android:minWidth="200dp"
             android:text="@string/authorization_sing_up"
         />
 
@@ -60,6 +78,19 @@
             android:layout_marginBottom="4dp"
             android:layout_marginTop="4dp"
             android:text="@string/authorization_forgot_password"
+        />
+
+        <TextView
+            android:id="@+id/errorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Bad username or password"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="14sp"
+            android:visibility="gone"
         />
 
     </LinearLayout>
