--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -1,7 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
+    <include layout="@layout/loading"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/contentView"
@@ -9,13 +11,14 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/friends_recycler"
+            android:id="@+id/people_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
         />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <include layout="@layout/error"/>
 
     <include
         android:id="@+id/progress_pagination_view"
