--- a/app/src/main/res/layout/item_friends.xml
+++ b/app/src/main/res/layout/item_friends.xml
@@ -29,6 +29,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginEnd="4dp"
         android:button="@drawable/circle_online"
+        android:clickable="false"
     />
 
 </LinearLayout>
