--- a/app/src/main/res/layout/item_post_full.xml
+++ b/app/src/main/res/layout/item_post_full.xml
@@ -21,8 +21,8 @@
 
         <ImageView
             android:id="@+id/owner_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="@dimen/post_owner_avatar_width"
+            android:layout_height="@dimen/post_owner_avatar_height"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="16dp"
