--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -9,7 +9,8 @@
     card_view:cardCornerRadius="10dp"
     card_view:cardElevation="8dp"
     card_view:cardMaxElevation="8dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardUseCompatPadding="true"
+>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,12 +18,13 @@
         android:paddingBottom="8dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="8dp">
+        android:paddingTop="8dp"
+    >
 
         <ImageView
             android:id="@+id/owner_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="@dimen/post_owner_avatar_width"
+            android:layout_height="@dimen/post_owner_avatar_height"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="16dp"
