--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -15,8 +15,8 @@
 
     <ImageView
         android:id="@+id/avatar_owner"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/nav_header_avatar_width"
+        android:layout_height="@dimen/nav_header_avatar_height"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:src="@drawable/circle"/>
 
@@ -25,7 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Name Surname"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
 </LinearLayout>
