--- a/app/src/main/res/layout/progress_pagination.xml
+++ b/app/src/main/res/layout/progress_pagination.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="#AA000000"
     android:gravity="center"
-    android:padding="5dp">
+    android:padding="@dimen/progress_padding">
 
     <ProgressBar
         android:id="@+id/more_progress"
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/more_progress"
-        android:padding="5dp"
+        android:padding="@dimen/progress_padding"
         android:text="@string/progress_wait"
         android:textColor="#ffffff"
         android:textSize="15sp"/>
