--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -47,8 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/owner_image"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="@dimen/post_image_margin_top"
+            android:layout_marginTop="@dimen/post_image_margin_top"
             android:textSize="18sp"/>
 
         <ImageButton
@@ -56,8 +56,8 @@
             android:layout_width="@dimen/post_like_dislike"
             android:layout_height="@dimen/post_like_dislike"
             android:layout_below="@+id/post_text"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="@dimen/post_image_margin_top"
+            android:layout_marginTop="@dimen/post_image_margin_top"
             android:background="@drawable/ic_like_default"/>
 
         <TextView
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/post_text"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/like"/>
 
         <ImageButton
@@ -75,7 +75,7 @@
             android:layout_height="@dimen/post_like_dislike"
             android:layout_below="@+id/post_text"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/like_count"
             android:background="@drawable/ic_dislike_default"/>
 
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/post_text"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/dislike"/>
 
     </RelativeLayout>
