Update UserPreferences (clear data, fulName, avatar) Add LoginUtil Update NavigationItem  (remove SingIn item, add logic to Logout item)

--- a/app/src/main/res/menu/navigation_item.xml
+++ b/app/src/main/res/menu/navigation_item.xml
@@ -37,15 +37,10 @@
         android:title="@string/nav_item_settings"
     />
 
-    <item android:title="@string/nav_menu_authorization">
-        <menu>
-            <item
-                android:id="@+id/nav_sing_in"
-                android:title="@string/nav_item_sing_in"/>
-            <item
-                android:id="@+id/nav_logout"
-                android:title="@string/nav_item_logout"/>
-        </menu>
-    </item>
+    <group android:id="@+id/nav_authorization">
+        <item
+            android:id="@+id/nav_logout"
+            android:title="@string/nav_item_logout"/>
+    </group>
 
 </menu>
