--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,5 +24,6 @@
     <dimen name="post_image_height">300dp</dimen>
     <dimen name="post_like_dislike">24dp</dimen>
     <dimen name="post_image_margin_top">4dp</dimen>
+    <dimen name="login_button_min_width">200dp</dimen>
 
 </resources>
