--- a/app/src/main/res/layout/item_post_image.xml
+++ b/app/src/main/res/layout/item_post_image.xml
@@ -40,7 +40,7 @@
             android:textSize="16sp"
         />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/post_menu_dot"
             android:layout_width="@dimen/post_like_dislike"
             android:layout_height="@dimen/post_like_dislike"
@@ -55,14 +55,14 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/post_marging_start"/>
 
-        <ImageButton
+        <ImageView
             android:id="@+id/like"
-            android:layout_width="@dimen/post_like_dislike"
-            android:layout_height="@dimen/post_like_dislike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/post_image"
             android:layout_marginStart="@dimen/post_image_margin_top"
             android:layout_marginTop="@dimen/post_image_margin_top"
-            android:background="@drawable/ic_like_default"/>
+            android:src="@drawable/ic_like_default"/>
 
         <TextView
             android:id="@+id/like_count"
@@ -73,15 +73,15 @@
             android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/like"/>
 
-        <ImageButton
+        <ImageView
             android:id="@+id/dislike"
-            android:layout_width="@dimen/post_like_dislike"
-            android:layout_height="@dimen/post_like_dislike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/post_image"
             android:layout_marginStart="@dimen/post_marging_start"
             android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/like_count"
-            android:background="@drawable/ic_dislike_default"/>
+            android:src="@drawable/ic_dislike_default"/>
 
         <TextView
             android:id="@+id/dislike_count"
