--- a/app/src/main/res/layout/tab_navigation.xml
+++ b/app/src/main/res/layout/tab_navigation.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 >
 
-    <ButtonResour
+    <Button
         android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
