ProfileFragment with Activity add collapsing Collapsing toolbar contain avatar and full name Update fragment_profile.xml UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="progressPaginationColor">#AA000000</color>
 
     <color name="newPostBottomColor">#dfdee6</color>
+    <color name="toolbar_title">#ffffff</color>
 
 </resources>
